fix: overflow login-input

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ input:focus {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: max-content;
 }
 
 .login-text{
